fix project hover on safari

--- a/style.css
+++ b/style.css
@@ -536,6 +536,7 @@ nav {
 
 .project__wrapper:hover .project__wrapper--bg {
   opacity: 0.7; 
+  visibility: visible;
 }
 
 .project__wrapper--bg {
@@ -547,6 +548,7 @@ nav {
   background-color: #1c1d25;
   opacity: 0; 
   transition: all 450ms ease;
+  visibility: hidden;
 }
 
 .project__description--title {
